src/objects/COPE10X10Snapshot__c.object
<CustomObject>
    <description>Use for reporting snapshot of the COPE Card Collected - All Division report;</description>
    <fields>
        <fullName>Actual_Increase_Amount__c</fullName>
        <description>Actual Increase Amount</description>
        <inlineHelpText>Actual Increase Amount</inlineHelpText>
        <label>Actual Increase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount</description>
        <inlineHelpText>Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPE_Card_Origination__c</fullName>
        <label>COPE Card Origination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPE_Pledge_Amount__c</fullName>
        <description>COPE Pledge Amount</description>
        <inlineHelpText>COPE Pledge Amount</inlineHelpText>
        <label>COPE Pledge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPE_Sign_Up_ID__c</fullName>
        <description>COPE Sign-Up ID (record id in COPE Sign-Up object)</description>
        <inlineHelpText>COPE Sign-Up ID (record id in COPE Sign-Up object)</inlineHelpText>
        <label>COPE Sign-Up ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPE_Sign_Up__c</fullName>
        <description>COPE Sign-Up ID</description>
        <inlineHelpText>COPE Sign-Up ID</inlineHelpText>
        <label>COPE Sign-Up</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <description>Card Number</description>
        <inlineHelpText>Card Number</inlineHelpText>
        <label>Card Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collected_by__c</fullName>
        <description>Collected by</description>
        <inlineHelpText>Collected by</inlineHelpText>
        <label>Collected by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <description>Coordinator</description>
        <inlineHelpText>Coordinator</inlineHelpText>
        <label>Coordinator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Card_Collected__c</fullName>
        <description>Date Card Collected</description>
        <inlineHelpText>Date Card Collected</inlineHelpText>
        <label>Date Card Collected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistrictName__c</fullName>
        <description>DistrictName</description>
        <inlineHelpText>DistrictName</inlineHelpText>
        <label>DistrictName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionName__c</fullName>
        <description>DivisionName</description>
        <inlineHelpText>DivisionName</inlineHelpText>
        <label>DivisionName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Type__c</fullName>
        <description>Division Type - includes the Division Unon-Wide</description>
        <inlineHelpText>Division Type - includes the Division Unon-Wide</inlineHelpText>
        <label>Division Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBoardSeats_ID__c</fullName>
        <description>EBoardSeats ID</description>
        <inlineHelpText>EBoardSeats ID</inlineHelpText>
        <label>EBoardSeats ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EboardEcom_Contact_Id__c</fullName>
        <description>EboardEcom Contact Id</description>
        <label>EboardEcom Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Ecom__c</fullName>
        <description>Eboard/Ecom</description>
        <inlineHelpText>Eboard/Ecom</inlineHelpText>
        <label>Eboard/Ecom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Seats__c</fullName>
        <description>Eboard Seats</description>
        <inlineHelpText>Eboard Seats</inlineHelpText>
        <label>Eboard Seats</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Employer_Name__c</fullName>
        <description>Member Employer Name</description>
        <inlineHelpText>Member Employer Name</inlineHelpText>
        <label>Member Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <description>Member Name</description>
        <label>Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_SF_Id__c</fullName>
        <description>Salesforce contact id for Member</description>
        <inlineHelpText>Salesforce contact id for Member</inlineHelpText>
        <label>Member SF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <description>Organizer</description>
        <inlineHelpText>Organizer</inlineHelpText>
        <label>Organizer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preactive_COPE_Signer_Employer__c</fullName>
        <label>Preactive COPE Signer Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preactive_COPE_Signer__c</fullName>
        <label>Preactive COPE Signer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <label>Regional Director</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revoke__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revoke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SeatName__c</fullName>
        <description>SeatName</description>
        <inlineHelpText>SeatName</inlineHelpText>
        <label>SeatName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(CreatedDate)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Title</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_COPE_Pledge_Date__c</fullName>
        <label>Verified COPE Pledge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified_COPE_Pledge__c</fullName>
        <description>Verified COPE Pledge</description>
        <inlineHelpText>Verified COPE Pledge</inlineHelpText>
        <label>Verified COPE Pledge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>COPE10X10Snaphot</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COPE10X10Snapshot</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>